# Lung-Lobes-Segmentation-in-CT-Scans

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  lung_segment.py  lung_segmentation-Copy1.ipynb  read_data.py  region_growing.cxx  vector_region_growing.cxx  vessel_segment.py
.ipynb_checkpoints/: lung_segmentation-checkpoint.ipynb
